# review-predictor

./: README.md  amazon_reviews_exploration.ipynb  pyproject.toml
notebooks/: 01-df-amazon_reviews_exploration.ipynb  02-df-random_forest_review_predictor.ipynb  03-df-word-representations.ipynb  04-df-embeddings.ipynb  05-df-misc.ipynb  06-text-classification-nn.ipynb
