[project]
name = "review-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "gensim==4.3.3",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "nbstripout>=0.8.1",
    "numpy==1.26.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "tensorflow>=2.18.1",
    "torch>=2.7.0",
    "transformers>=4.52.4",
]

[dependency-groups]
dev = [
    "nbstripout>=0.8.1",
]
